--- a/0-bootstrap/single-cluster/1-infra/kustomization.yaml
+++ b/0-bootstrap/single-cluster/1-infra/kustomization.yaml
@@ -1,4 +1,10 @@
 resources:
+- argocd/consolenotification.yaml
+- argocd/namespace-b2bi-prod.yaml
+- argocd/namespace-sealed-secrets.yaml
+- argocd/serviceaccounts-b2bi-prod.yaml
+- argocd/sfg-b2bi-clusterwide.yaml
+- argocd/daemonset-sync-global-pullsecret.yaml
 #- argocd/consolelink.yaml
 #- argocd/consolenotification.yaml
 #- argocd/machine-configuration.yaml
@@ -61,7 +67,7 @@ patches:
   patch: |-
     - op: add
       path: /spec/source/repoURL
-      value: ${GIT_BASEURL}/${GIT_ORG}/${GIT_GITOPS_INFRA}
+      value: https://github.com/sfgorg1/multi-tenancy-gitops-infra.git
     - op: add
       path: /spec/source/targetRevision
-      value: ${GIT_GITOPS_INFRA_BRANCH}
+      value: master
